--- a/pages/potTrade/index.wxml
+++ b/pages/potTrade/index.wxml
@@ -1,43 +1,78 @@
 <view class="filterWrap">
-	<view class="inputView">
-		<i class="iconfont icon-sousuo"></i>
-		<input type="text" placeholder="请输入储罐品牌" confirm-type="search" />
+	<view class="pubMod">
+		<i class="iconfont icon-bianji"></i>
+		<text>发布储罐租卖</text>
+		<isAuthor bind:flagEvent="pubPotTrade"></isAuthor>
 	</view>
-	<view class="filterBtn">
+	<view class="filterBtn" bindtap="goFilter">
 		<text>筛选</text>
 		<i class="iconfont icon-shaixuan"></i>
 	</view>
 </view>
 <view class="tabFilter">
-	<view class="tabItem active"><view class="lineView"></view>卖储罐</view>
-	<view class="tabItem"><view class="lineView"></view>租储罐</view>
+	<view 
+		wx:for="{{navTab}}"
+		wx:key="index"
+		data-index="{{index}}"
+		class="tabItem {{currentTab == index ? 'active' : ''}}"
+		bindtap="getCurrentTabCon"
+	><view class="lineView"></view>{{item}}</view>
 </view>
 <!-- listView -->
 <view class="potList">
-	<view class="listItem clearfix">
+	<view class="listItem clearfix"
+		wx:for="{{potTradeData}}"
+		wx:key="index"
+		data-id="{{item.ptId}}"
+		bindtap="goPotTradeDet"
+	>
 		<view class="imgView">
-			
+			<image src="{{serverUrl}}/{{item.mainImg}}" mode="aspectFill"></image>
 		</view>
 		<view class="listItemCon">
-			<view class="psArea ellip">大型 卧式储罐 化工 液体 </view>
+			<view class="psArea ellip">{{item.potPpName}}</view>
 			<view class="volume clearfix">
-				<view class="volumeItem">容积:200m³</view>
-				<view class="volumeItem ellip">品牌:百恒达详</view>
+				<view class="volumeItem">容积:{{item.potVol}}m³</view>
+				<block wx:if="{{item.sxInfo == 1}}">
+					<text class="sxTxt">有手续</text>
+				</block>
 			</view>
 			<view class="proDate">
-				<text>生产日期：2018-12-03</text>
-				<text>有手续</text>
+				<text>购置年份：{{item.buyYear}}</text>
 			</view>
-			<view class="priceView">
-				<text>¥</text>
-				<text class="priceNum">8000</text>
+			<view class="priceView clearfix">
+				<view class="hasFloat">
+					<text class="priceTit">租卖价格:</text>
+					<text class="unit">¥</text>
+					<text class="priceNum">{{item.leasePrice}}</text>
+				</view>
+				<block wx:if="{{item.tradeStatus == 0}}">
+					<view class="hasFloat hasMargL">
+						<text class="priceTit">销售价格:</text>
+						<text class="unit">¥</text>
+						<text class="priceNum">{{item.sellPrice}}</text>
+					</view>
+				</block>
 				<i class="iconfont icon-gengduo"></i>
 			</view>
 		</view>
 	</view>
-	
 </view>
-<!-- 发布 -->
-<view class="pubBtnWrap">
-	<image src="../../images/pub.png"></image>
-</view>
+<view class="noDataList" style="margin-top: 320rpx;" hidden="{{isHasDataFlag}}">
+	<image mode="widthFix" src="../../images/noData.png"></image>
+	<view class="noDataTxt">暂无记录</view>
+</view> 
+<block wx:if="{{isHasDataFlag}}">
+	<view class="loadingIcon">
+		<block wx:if="{{loading}}">
+			<image src="../../images/loading-bars.svg" mode="widthFix"></image>
+		</block>
+		<block wx:else>
+			<view class="noDataTxt">
+				<text>——————</text>
+				<text>我是有底线的~</text>
+				<text>——————</text>
+			</view>
+		</block>
+	</view> 
+</block>
