--- a/pages/rqMaoyi/filter.wxml
+++ b/pages/rqMaoyi/filter.wxml
@@ -1,44 +1,46 @@
-<view class="filterMod padd">
-	<view class="modTit otherCol">液质选择<text class="subTxt">(多选)</text></view>
-	<view class="areaList clearfix">
-		<view class="areaItem"
-			wx:for="{{lqNameData}}"
-			wx:key="index"
-			class="areaItem {{item.state==1 ? 'active':''}}"
-			data-index="{{index}}"
-			bindtap="selectLqType"
-		>{{item.name}}</view>
-	</view>
-</view>
-<!-- 价格区间 -->
-<view class="filterMod padd">
-	<view class="modTit otherCol">价格区间<text class="subTxt">(元)</text></view>
-	<view class="priceRangeWrap">
-		<view class="priceRange">
-			<input type="number" placeholder="最低价" maxlength="6" />
-		</view>
-		<view>——</view>
-		<view class="priceRange">
-			<input type="number" placeholder="最高价" maxlength="6"/>
-		</view>
-	</view> 
-</view> 
-<view class="filterMod padd">
-	<view class="modTit otherCol">配送区域<text class="subTxt">(多选)</text></view>
-	<view class="areaList clearfix">
+<form bindsubmit="formSubmit">
+	<view class="filterMod padd">
+		<view class="modTit otherCol">液质选择<text class="subTxt">(多选)</text></view>
 		<view class="areaList clearfix">
-			<view
-				wx:for="{{provData}}"
+			<view class="areaItem"
+				wx:for="{{lqNameData}}"
 				wx:key="index"
 				class="areaItem {{item.state==1 ? 'active':''}}"
 				data-index="{{index}}"
-				bindtap="selectProv"
-			>{{item.province}}</view>
+				bindtap="selectLqType"
+			>{{item.name}}</view>
 		</view>
 	</view>
-</view>
+	<!-- 价格区间 -->
+	<view class="filterMod padd">
+		<view class="modTit otherCol">价格区间<text class="subTxt">(元)</text></view>
+		<view class="priceRangeWrap">
+			<view class="priceRange">
+				<input type="number" name="minPrice" placeholder="最低价" maxlength="6" />
+			</view>
+			<view>——</view>
+			<view class="priceRange">
+				<input type="number" name="maxPrice" placeholder="最高价" maxlength="6"/>
+			</view> 
+		</view> 
+	</view> 
+	<view class="filterMod padd">
+		<view class="modTit otherCol">配送区域<text class="subTxt">(多选)</text></view>
+		<view class="areaList clearfix">
+			<view class="areaList clearfix">
+				<view
+					wx:for="{{provData}}"
+					wx:key="index"
+					class="areaItem {{item.state==1 ? 'active':''}}"
+					data-index="{{index}}"
+					bindtap="selectProv"
+				>{{item.province}}</view>
+			</view>
+		</view>
+	</view>
 
-<view class="filterBtnWrap">
-	<button>重置</button>
-	<button class="sureBtn">确定</button>
-</view>
+	<view class="filterBtnWrap">
+		<button bindtap="resetFilter">重置</button>
+		<button class="sureBtn" formType="submit">确定</button>
+	</view>
+</form>
