--- a/pages/rqMaoyi/index.wxml
+++ b/pages/rqMaoyi/index.wxml
@@ -15,6 +15,8 @@
 		<view class="listItem clearfix"
 			wx:for="{{rqTradeData}}"
 			wx:key="*this"
+			bindtap="getMyDet"
+			data-id="{{item.id}}"
 		>
 			<view class="imgView">
 				<image src="{{serverUrl}}/{{item.headImg}}" mode="aspectFill"></image>
@@ -23,7 +25,7 @@
 				<view class="psArea ellip">配送区域：{{item.psArea}}</view>
 				<view class="yzyyd ellip">
 					<text>液质：{{item.gasTypeName}}</text>
-					<text>液源地：{{item.gfName}}</text>
+					<text>液源地：{{item.yyd}}</text>
 				</view>
 				<view class="priceView"> 
 					<view class="detPrice">
