--- a/pages/rqMaoyi/index.wxss
+++ b/pages/rqMaoyi/index.wxss
@@ -1,13 +1,18 @@
+page{
+	margin-top: 81rpx;
+}
 .filterWrap{
+	width: 100%;
 	height: 80rpx;
 	display: flex;
 	justify-content: space-between;
-	padding: 0 30rpx;
 	align-items: center;
 	background: #fff;
-	position: relative;
 	z-index: 3;
 	border-bottom: 1rpx solid #e8e8e8;
+	position: fixed;
+	left: 0;
+	top: 0;
 }
 .pubMod{
 	float: left;
@@ -16,10 +21,14 @@
 	font-size: 28rpx;
 	color: #606060;
 	position: relative;
+	margin-left: 30rpx;
 }
 .pubMod i{
 	margin-right: 10rpx;
 	font-size: 30rpx;
+}
+.filterBtn {
+	margin-right: 30rpx;
 }
 .filterBtn text{
 	font-size: 28rpx;
