--- a/pages/rqMySellerDet/index.wxml
+++ b/pages/rqMySellerDet/index.wxml
@@ -1,38 +1,43 @@
 <view class="mainHeadImg">
-	<image></image>
+	<image src="{{serverUrl}}/{{tradeDetData.headImg}}" data-src="{{serverUrl}}/{{originHeadImg}}" mode="aspectFill" bindtap="previewHeadImg"></image>
 </view>
 <view class="sellerInfo padd">
 	<view class="topSellerInfo">
 		<view class="compName ellip">濮阳浩泰能源有限公司</view>
-		<view class="hpNum">好评度98%</view>
+		<block wx:if="{{tradeDetData.hpRate == '暂无'}}">
+			<view class="hpNum">暂无公司好评度</view>
+		</block>
+		<block wx:else>
+			<view class="hpNum">好评度{{tradeDetData.hpRate}}</view>
+		</block>
 	</view>
 	<view class="psArea">
 		<view>配送区域：</view>
-		<text>北京市/河北省/北京市/河北省</text>
+		<text>{{psArea}}</text>
 	</view>
 	<view class="lqyyd clearfix">
-		<view>液质:深冷管道热气</view>
-		<view>液源地:濮阳</view>
+		<view>液质:{{tradeDetData.gasFacotryList[0].gasTypeName}}</view>
+		<view>液源地:{{tradeDetData.yyd}}</view>
 	</view>
 	<view class="priceItem clearfix">
 		<view class="priceNum">
 			<text class="rmb">￥</text>
-			<text class="price">4200</text>
+			<text class="price">{{tradeDetData.gasPrice}}</text>
 			<text>/m³</text>
 		</view>
-		<view class="zzl">装载量1020m³</view>
-		<view class="zzl">装车时间：2019-12-04</view>
+		<view class="zzl">装载量{{tradeDetData.gasVolume}}m³</view>
+		<view class="zzl">装车时间:{{tradeDetData.zcDate}}</view>
 	</view>
 </view>
 <view class="sellerTel clearfix">
 	<view class="sellerImg">
-		<image></image>
+		<image src="{{tradeDetData.userHead}}"></image>
 	</view>
 	<view class="telInfo">
-		<text>王杰</text>
-		<text>13311089766</text>
+		<text>{{tradeDetData.lxName}}</text>
+		<text>{{tradeDetData.lxTel}}</text>
 	</view>
-	<view class="phoneCall">
+	<view class="phoneCall" bindtap="getPhoneCall" data-phone="{{tradeDetData.lxTel}}">
 		<i class="iconfont icon-tel"></i>
 	</view>
 </view>
@@ -40,17 +45,45 @@
 <view class="tradeDetView padd">
 	<view class="imgItemTit">车辆信息</view>
 	<view class="imgItem">
-		<image mode="aspectFill"></image>
+		<image mode="aspectFill" src="{{serverUrl}}/{{tradeDetData.tructsImg}}" data-src="{{serverUrl}}/{{clOriginImg}}" bindtap="previewClImg"></image>
 	</view>
 </view>
-<view class="botFun">
-	<view class="focusView">
-		<view class="iconView">
-			<i class="iconfont icon-guanzhu"></i>
-			<!-- <i class="iconfont icon-guanzhu1"></i> -->
-		</view>
-		<view class="iconTxt">关注</view>
+<view class="tradeDetView padd">
+	<view class="imgItemTit">危化品许可证</view>
+	<view class="imgItem">
+		<image mode="aspectFill" src="{{serverUrl}}/{{tradeDetData.whpImg}}" data-src="{{serverUrl}}/{{clOriginImg}}" bindtap="previewWhpImg"></image>
 	</view>
+</view>
+<block wx:if="{{tradeDetData.otherImgList.length > 0}}">
+	<view class="tradeDetView padd">
+		<view class="imgItemTit">燃气贸易详情图</view>
+		<view class="imgItem" 
+			wx:for="{{tradeDetData.otherImgList}}"
+			wx:key="*this"
+		>
+			<image mode="aspectFill" src="{{serverUrl}}/{{item.gtiImg}}" bindtap="previewDetImg" data-index="{{index}}"></image>
+		</view>
+	</view>
+</block>
+<view class="botFun">
+	<block wx:if="{{userFocus}}">
+		<view class="focusView">
+			<view class="iconView">
+				<i class="iconfont icon-guanzhu1"></i>
+			</view>
+			<view class="iconTxt">已关注</view>
+			<isAuthor bind:flagEvent="cancelFocus"></isAuthor>
+		</view>
+	</block>
+	<block wx:else>
+		<view class="focusView">
+			<view class="iconView">
+				<i class="iconfont icon-guanzhu"></i>
+			</view>
+			<view class="iconTxt">关注</view>
+			<isAuthor bind:flagEvent="getFocus"></isAuthor>
+		</view>
+	</block>
 	<!-- <view class="focusView">
 		<view class="iconView">
 			<i class="iconfont icon-wodexiaoxi"></i>
@@ -101,3 +134,7 @@
 		<i class="iconfont icon-guanbi"></i>
 	</view>
 </view>
+<view class="noDataList" hidden="{{isHasDataFlag}}">
+	<image mode="widthFix" src="../../images/noData.png"></image>
+	<view class="noDataTxt">暂无记录</view>
+</view> 
