--- a/style/sellerDet.wxss
+++ b/style/sellerDet.wxss
@@ -5,9 +5,8 @@ page{
 .mainHeadImg{
 	width: 100%;
 	height: 400rpx;
-	background: pink;
 }
-.mainHeadImg imgage{
+.mainHeadImg image{
 	width: 100%;
 	height: 100%;
 }
@@ -25,6 +24,27 @@ page{
 	color: #121212;
 	float: left;
 	max-width: 78%;
+}
+.topSellerInfo .compName.spec{
+	max-width: 67%;
+}
+.topSellerInfo .cardNum{
+	float: left;
+	font-size: 30rpx;
+	color: #121212;
+	margin-left: 15rpx;
+}
+.topSellerInfo .compType{
+	width: 75rpx;
+	height: 38rpx;
+	line-height: 38rpx;
+	background: #eef4ff;
+	float: right;
+	border-radius: 6rpx;
+	color: #3c7de9;
+	text-align: center;
+	font-size: 24rpx;
+	margin-top: 22rpx;
 }
 .hpNum{
 	font-size: 24rpx;
@@ -57,21 +77,23 @@ page{
 	margin-left: 20rpx;
 }
 .priceItem{
+	height: 60rpx;
+	line-height: 60rpx;
 	padding-bottom: 15rpx;
 }
 .priceNum{
 	float: left;
 	color: #606060;
-	line-height: 40rpx;
 	margin-right: 30rpx;
 }
-.priceNum text.rmb{
+.priceNum text.rmb,
+.unit{
 	color:#d32f2f ;
 	font-size: 24rpx;
 }
 .priceNum text.price{
 	color:#d32f2f ;
-	font-size: 30rpx;
+	font-size: 34rpx;
 	font-weight: 620;
 }
 .priceNum text:last-child{
@@ -79,10 +101,15 @@ page{
 }
 .zzl{
 	float: left;
+	height: 100%;
 	color: #a9a9a9;
-	line-height: 40rpx;
 	font-size: 24rpx;
 	margin-right: 30rpx;
+}
+.zzl.fr{
+	float: right;
+	margin-right: 0;
+	margin-top: 10rpx;
 }
 .sellerTel{
 	background: #fff; 
