完成槽车租卖模块 Signed-off-by: simon <simonHlf@163.com>

--- a/pages/basic/getCarCardNum/index.wxml
+++ b/pages/basic/getCarCardNum/index.wxml
@@ -15,3 +15,7 @@
 	<image mode="widthFix" src="../../../images/noData.png"></image>
 	<view class="noDataTxt">暂无车牌号</view>
 </view>
+<view class="pubBtnWrap" bindtap="addCpNum">
+	<image src="../../../images/pub.png"></image>
+	<i class="iconfont icon-tianjia"></i>
+</view>
