--- a/app.wxss
+++ b/app.wxss
@@ -28,14 +28,26 @@
 .pubBtnWrap{
 	width: 96rpx;
 	height: 96rpx;
+	line-height: 96rpx;
 	position: fixed;
 	right: 30rpx;
 	bottom: 100rpx;
 	z-index: 10;
+	text-align: center;
 }
 .pubBtnWrap image{
 	width: 100%;
 	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 1;
+}
+.pubBtnWrap i{
+	color: #fff;
+	font-size: 36rpx;
+	position: relative;
+	z-index: 2;
 }
 .layer{
 	position: absolute;
@@ -73,7 +85,7 @@
 	margin-top: -36rpx;
 }
 .maskLayer{
-	position: absolute;
+	position: fixed;
 	left:0;
 	right: 0;
 	top: 0;
