--- a/pages/trucksSellDet/index.wxml
+++ b/pages/trucksSellDet/index.wxml
@@ -5,18 +5,23 @@
 	<view class="hasBorBot">
 		<view class="topSellerInfo">
 			<view class="compName trucks ellip">
-				<view class="truckName ellip">陕汽德龙F300陕汽德龙F3000重卡陕汽德龙F3000重卡0重卡</view>
-				<view>豫J12345</view>
+				<view class="truckName ellip">{{devDetData.title}}</view>
+				<!-- <view>豫J12345</view> -->
 			</view>
-			<view class="compType">公司</view>
+			<block wx:if="{{devDetData.CompanyName == '个人'}}">
+				<view class="compType">个人</view>
+			</block>
+			<block wx:else>
+				<view class="compType">公司</view>
+			</block>
 		</view>
 		<view class="priceItem smPad clearfix">
 			<view class="priceNum potPrice">
 				<text class="rmb">￥</text>
-				<text class="price">36</text>
+				<text class="price">{{devDetData.price}}</text>
 				<text class="rmb">万</text>
 			</view>
-			<view class="distance">行驶42686万公里</view>
+			<view class="distance">行驶{{devDetData.xsDistance}}公里</view>
 		</view>
 	</view>
 </view>
@@ -26,10 +31,10 @@
 	</view>
 	<view class="rqDevCompName">
 		<view class="lxrNameTel">
-			<text>王经理</text>
-			<text>13311089766</text>
+			<text>{{devDetData.lxName}}</text>
+			<text>{{devDetData.lxTel}}</text>
 		</view>
-		<view class="rqDevName ellip">放松放松的疯狂家里看电视</view>
+		<view class="rqDevName ellip">{{devDetData.CompanyName}}</view>
 	</view>
 	<view class="phoneCall" data-phone="{{devDetData.lxTel}}" bindtap="getPhoneCall">
 		<i class="iconfont icon-tel"></i>
@@ -43,63 +48,127 @@
 	<view class="trucksInfoItem clearfix">
 		<view class="infoItem">
 			<view class="infoItemTit">车头上牌年份</view>
-			<view class="infoItemCon ellip">2018-08</view>
+			<view class="infoItemCon ellip">{{devDetData.spYear}}</view>
 		</view>
 		<view class="infoItem">
 			<view class="infoItemTit">品牌型号</view>
-			<view class="infoItemCon ellip">陕汽德龙F300</view>
+			<view class="infoItemCon ellip">{{devDetData.headPpName}}</view>
 		</view>
 		<view class="infoItem">
 			<view class="infoItemTit">排放标准</view>
-			<view class="infoItemCon ellip">国五</view>
+			<view class="infoItemCon ellip">{{devDetData.pfbzName}}</view>
 		</view>
 	</view>
 	<view class="trucksInfoItem clearfix">
 		<view class="infoItem">
-			<view class="infoItemTit">车头动力</view>
-			<view class="infoItemCon ellip">柴油动力</view>
+			<view class="infoItemTit">车头类型</view>
+			<view class="infoItemCon ellip">{{devDetData.headTypeName}}</view>
 		</view>
 		<view class="infoItem">
 			<view class="infoItemTit">车辆注册地</view>
-			<view class="infoItemCon ellip">河南省濮阳市河南省濮阳市</view>
+			<view class="infoItemCon ellip">{{devDetData.regPlace}}</view>
 		</view>
 		<view class="infoItem">
 			<view class="infoItemTit">重大事故</view>
-			<view class="infoItemCon ellip">无</view>
+			<block wx:if="{{devDetData.accidentFlag}} == 0 ">
+				<view class="infoItemCon ellip">不公开</view>
+			</block>
+			<block wx:elif="{{devDetData.accidentFlag == 1}}">
+				<view class="infoItemCon ellip">是</view>
+			</block>
+			<block wx:else>
+				<view class="infoItemCon ellip">否</view>
+			</block>
 		</view>
 	</view>
-	<view class="trucksInfoItem clearfix">
-		<view class="infoItem">
-			<view class="infoItemTit">储罐上牌日期</view>
-			<view class="infoItemCon ellip">2019-08</view>
+	<block wx:if="{{devDetData.trucksTypes == 2}}">
+		<view class="trucksInfoItem clearfix">
+			<view class="infoItem">
+				<view class="infoItemTit">储罐上牌日期</view>
+				<view class="infoItemCon ellip">{{devDetData.spYearPot}}</view>
+			</view>
+			<view class="infoItem">
+				<view class="infoItemTit">储罐容积</view>
+				<view class="infoItemCon ellip">{{devDetData.potVol}}m³</view>
+			</view>
+			<view class="infoItem">
+				<view class="infoItemTit">储罐品牌</view>
+				<block wx:if="{{devDetData.potPpName==''}}">
+					<view class="infoItemCon ellip">暂无</view>
+				</block>
+				<block wx:else>
+					<view class="infoItemCon ellip">{{devDetData.potPpName}}</view>
+				</block>
+				
+			</view>
 		</view>
-		<view class="infoItem">
-			<view class="infoItemTit">储罐容积</view>
-			<view class="infoItemCon ellip">300m³</view>
-		</view>
-		<view class="infoItem">
-			<view class="infoItemTit">储罐品牌</view>
-			<view class="infoItemCon ellip">国五</view>
-		</view>
-	</view>
+	</block>
 	<view class="trucksInfoItem clearfix">
 		<view class="infoItem spec">
 			<view class="infoItemTit">备注</view>
-			<view class="infoItemCon">发生颠覆第三方的身份双方是否是地方十分的舒服的事的方式十分的舒服的事的方式舒服的沙发上</view>
+			<view class="infoItemCon">{{devDetData.remark}}</view>
 		</view>
 	</view>
-	
 </view>
+<block wx:if="{{devDetData.TradeTypeName == '租赁'}}">
+	<view class="proBasicInfo padd">
+		<view class="proTit noBor">
+			<view class="lineView"></view>
+			<view>进港资质</view>
+		</view>
+		<view class="jgzz clearfix">
+			<view class="jgzzItem"
+				wx:for="{{devDetData.tqList}}"
+				wx:key="index"
+			>{{item.qualName}}</view>
+		</view>
+	</view>
+</block>
 <!-- 车辆相关证件照片 --> 
-<view class="proDetImg padd">
-	<view class="proTit noBor">
-		<view class="lineView"></view>
-		<view>车辆相关证件照片</view>
+<block wx:if="{{devDetData.trucksTypes == 2}}">
+	<!-- 危货 -->
+	<view class="proDetImg hasMargBot padd">
+		<view class="proTit noBor">
+			<view class="lineView"></view>
+			<view>车辆相关证件照片</view>
+		</view>
+		<view class="detImgWrap">
+			<image src="{{serverUrl}}/{{devDetData.tructsHeadxsz}}" data-src="{{serverUrl}}/{{originCtXszImg}}" mode="aspectFill"  bindtap="previewCtImg"></image>
+			<view class="zhengView">车头行驶证</view>
+		</view>
+		<view class="detImgWrap">
+			<image src="{{serverUrl}}/{{devDetData.gcXsz}}" data-src="{{serverUrl}}/{{originGcXszImg}}" mode="aspectFill" bindtap="previewGcImg"></image>
+			<view class="zhengView">罐车行驶证</view>
+		</view>
+		<view class="detImgWrap">
+			<image src="{{serverUrl}}/{{devDetData.tructsYyz}}" data-src="{{serverUrl}}/{{originClyyzImg}}" mode="aspectFill" bindtap="previewClyyzImg"></image>
+			<view class="zhengView">车辆运营证</view>
+		</view>
+		<view class="detImgWrap">
+			<image src="{{serverUrl}}/{{devDetData.potjyz}}" data-src="{{serverUrl}}/{{originCghgImg}}" mode="aspectFill" bindtap="previewCghgImg"></image>
+			<view class="zhengView">储罐检验合格证</view>
+		</view>
+		<view class="detImgWrap">
+			<image src="{{serverUrl}}/{{devDetData.aqfBg}}" data-src="{{serverUrl}}/{{originAqfbgImg}}" mode="aspectFill" bindtap="previewAqfImg"></image>
+			<view class="zhengView">安全阀校验报告</view>
+		</view>
 	</view>
-	<view class="detImgWrap">
-		<image mode="aspectFill"></image>
+</block>
+<!-- 产品详情图 --> 
+<block wx:if="{{devDetData.zzlist.length > 0}}">
+	<view class="proDetImg padd">
+		<view class="proTit noBor">
+			<view class="lineView"></view>
+			<view>产品详情图</view>
+		</view>
+		<view class="detImgWrap"
+			wx:for="{{devDetData.zzlist}}"
+			wx:key="*this"
+		>
+			<image mode="aspectFill" src="{{serverUrl}}/{{item.ttImg}}" bindtap="previewDetImg" data-index="{{index}}"></image>
+		</view>
 	</view>
-</view>
+</block>
 <view class="botFun">
 	<block wx:if="{{ufId != ''}}">
 		<view class="focusView">
@@ -119,7 +188,7 @@
 			<isAuthor bind:flagEvent="getFocus"></isAuthor>
 		</view>
 	</block>
-	<view class="buyGasBtn">预约看车</view>
+	<view class="buyGasBtn" data-phone="{{devDetData.lxTel}}" bindtap="getPhoneCall">电话咨询</view>
 </view>
 <!-- 买气弹窗 -->
 <view class="maskLayer" hidden="{{isShowLayerFlag}}"></view>
